# iced-docgen

./: Cargo.toml  README.md  readme.org
crates/iced-docgen/: Cargo.toml
crates/iced-docgen-macros/: Cargo.toml
crates/iced-docgen-macros/src/: lib.rs
crates/iced-docgen/src/: ice.rs  lib.rs  registry.rs  render.rs
crates/iced-docgen/src/dsl/: action.rs  context.rs  diagnostics.rs  inspector.rs  mod.rs  story.rs  vision.rs
crates/iced-docgen/tests/: integration.rs
