[package]
name = "iced-docgen-macros"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Procedural macros for iced-docgen"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
