[package]
name = "iced-docgen"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
iced-docgen-macros = { path = "../iced-docgen-macros" }
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
iced.workspace = true
iced_test.workspace = true
